--- a/pytest_historic/templates/index.html
+++ b/pytest_historic/templates/index.html
@@ -2,7 +2,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://img.icons8.com/cotton/64/000000/time-machine.png" rel="shortcut icon" type="image/x-icon" />
-<title>Pytest Historic</title>
+<title>Pytest Test Automation</title>
 <style>
     body {
         font-family: 'Source Sans Pro', sans-serif;
@@ -45,7 +45,7 @@
                             <p class="text-muted lead mb-5"></p>
                         </div>
                         <div class="col-md-12 mx-auto text-center">
-                            <h2 class="display-4">Welcome to Pytest Historic</h2>
+                            <h2 class="display-4">Welcome to Pytest Test Automation</h2>
                             <p class="text-light">Custom report of historical execution results.</p>
                             <hr>
                         </div>
